--- a/higherLower.html
+++ b/higherLower.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Higher Lower</h1>
-        <P>Guess a number between 1 and 20</P>
+        <P id="instructions">Guess a number between 1 and...</P>
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <form>
